<resources>
    <string name="app_name">as3</string>
    <string name="apple_picker">Apple Picker</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="author">Written by Max Zhang and Gahee Kim for Intro to Software Engineering
        (<a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">Cmpt 276 Homepage</a>) </string>
    <string name="instructions">When playing Apple Picker, click on areas of the game to find your apples. If you don’t find an apple after clicking a button, you’ll start off a scan to count how many apples are in that button’s column and row. You can also click an apple to have it scan it’s row and column for other hidden apples.</string>
    <string name="about_the_authors">About the Authors</string>
    <string name="resources">Resources</string>
    <string name="resourcesList">(<a href="https://www.reddit.com/r/Minecraft/comments/je4bgj/my_apple_orchard_apples_done_with_armor_stands/">Welcome Background</a>)
        (<a href="https://www.youtube.com/watch?v=Fiaf796kieI">Eat Sound</a>)
        (<a href="https://www.minecraft.net/en-us">Apple and Wood Block from Minecraft</a>)

    </string>
    <string name="tvinstructions">Instructions</string>
    <string name="total_scans_0">Total Scans: 0</string>
    <string name="mines_found_0_of">Mines Found: 0 of</string>
    <string name="_4_rows_x_6_columns">4 Rows x 6 Columns</string>
    <string name="_5_rows_x_10_columns">5 Rows x 10 Columns</string>
    <string name="_6_rows_x_15_columns">6 Rows x 15 Columns</string>
    <string name="_6">6</string>
    <string name="_10">10</string>
    <string name="_15">15</string>
    <string name="_20">20</string>
    <string name="number_of_mines">Number of Mines</string>
    <string name="board_size">Board Size</string>
    <string name="help">HELP</string>
    <string name="options">OPTIONS</string>
    <string name="play">PLAY</string>
</resources>