<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="787dp"
        android:layout_height="488dp"
        android:tint="#8B000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_bg" />

    <include
        android:id="@+id/tbOptions"
        layout="@layout/toolbar" />

    <RadioGroup
        android:id="@+id/sizeOptions"
        android:layout_width="280dp"
        android:layout_height="216dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/boardTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/boardTitle"
        app:layout_constraintTop_toBottomOf="@+id/boardTitle"
        app:layout_constraintVertical_bias="0.168">

        <RadioButton
            android:id="@+id/size1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4_rows_x_6_columns"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/size2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_rows_x_10_columns"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/size3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6_rows_x_15_columns"
            android:textColor="@color/white"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/minesOptions"
        android:layout_width="285dp"
        android:layout_height="217dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/minesTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/minesTitle"
        app:layout_constraintTop_toBottomOf="@+id/minesTitle"
        app:layout_constraintVertical_bias="0.17">

        <RadioButton
            android:id="@+id/Mines6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/Mines10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/Mines15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_15"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/Mines20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_20"
            android:textColor="@color/white"/>
    </RadioGroup>

    <TextView
        android:id="@+id/minesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_mines"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.678"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <TextView
        android:id="@+id/boardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/board_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

</androidx.constraintlayout.widget.ConstraintLayout>