<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imgMenuBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="740dp"
        android:layout_height="448dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_bg" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:text="@string/play"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="146dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:text="@string/options"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOptions" />

    <ImageButton
        android:id="@+id/btnHelp"
        android:layout_width="132dp"
        android:layout_height="137dp"
        android:layout_marginTop="100dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/woodblock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbMainMenu" />

    <ImageButton
        android:id="@+id/btnOptions"
        android:layout_width="141dp"
        android:layout_height="129dp"
        android:layout_marginTop="100dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/woodblock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbMainMenu" />

    <include
        android:id="@+id/tbMainMenu"
        layout="@layout/toolbar" />

    <ImageButton
        android:id="@+id/btnPlay"
        android:layout_width="147dp"
        android:layout_height="140dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="157dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/apple"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbMainMenu"
        app:layout_constraintVertical_bias="0.967" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="101dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:text="@string/help"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHelp" />

</androidx.constraintlayout.widget.ConstraintLayout>